--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>reactsetup</title>
   </head>
   <body>
-    <div id="root" data-theme=""></div>
+    <div id="root" class="bg-zinc-900 ">
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
