--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Sketchify</title>
   </head>
   <body>
-    <div id="root" class="bg-zinc-900 ">
+    
+    <div id="root" class="bg-gradient-to-t from-zinc-800 to-black">
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
